correct gallery z-index

--- a/scss/_gallery.scss
+++ b/scss/_gallery.scss
@@ -62,7 +62,7 @@
     font-family: "Glyphicons Halflings";
     content: "\e003";
     pointer-events: none;
-    z-index: 10;
+    z-index: 1;
     transition: 0.4s;
   }
 
